react-app/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
  namespace: workshop
spec:
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - image: apetani/react-app:latest
        name: app
        ports:
        - containerPort: 80
        imagePullPolicy: Always
